--- a/package.json
+++ b/package.json
@@ -1,22 +1,14 @@
 {
-  "name": "projects-site",
+  "name": "lost-and-found",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "body-parser": "^2.2.0",
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "multer": "^2.0.2",
-    "nodemailer": "^7.0.6"
-  },
-  "devDependencies": {}
+    "express": "^4.18.2",
+    "nodemailer": "^6.9.8",
+    "multer": "^1.4.5",
+    "cors": "^2.8.5"
+  }
 }
