Update fetch URL to Render backend

--- a/credential.env
+++ b/credential.env
@@ -1,2 +1,2 @@
-GMAIL_USER=kenpascualjacob@gmail.com
-GMAIL_PASS=jyus zwiw ucwn jhgc
+GMAIL_USER=anonymousetrialanderror@gmail.com
+GMAIL_PASS=bzmu uawr ylju htgc
