--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "nodemailer": "^6.9.8",
-    "multer": "^1.4.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "multer": "^1.4.4",
+    "nodemailer": "^6.9.8",
+    "nodemailer-sendgrid-transport": "^0.2.0"
   }
 }
